# PacketProtocol

./: Cargo.toml  LICENSE  README.md
src/: buffer.rs  encryption.rs  lib.rs  packet.rs  protocol_version.rs  registry.rs
src/registry/: mod.rs
src/registry/handshake/: mod.rs  server_bound.rs
src/registry/login/: client_bound.rs  mod.rs  server_bound.rs
src/registry/play/: client_bound.rs  mod.rs  server_bound.rs
src/registry/status/: client_bound.rs  server_bound.rs
tests/: sanity.rs
