[package]
name = "mc_packet_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
minecraft_data_types = { version = "0.1.0", git = "https://github.com/Minecraft-rs/MinecraftTypes", branch = "master" }
anyhow = "1.0.44"
paste = "1.0.5"
bytes = "1.1.0"
rsa = "0.5.0"
rand = "0.8.4"
cfb8 = "0.7.1"
aes = "0.7.5"
async-trait = "0.1.51"
log = "0.4"
flate2 = "1.0"
tokio = { version = "1", features = ["net", "io-util"] }
