[package]
name = "mc_packet_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
minecraft_data_types = { version = "0.1.0", git = "https://github.com/SubZeroLabs/MinecraftTypes", branch = "master" }
anyhow = "1.0.44"
paste = "1.0.5"
bytes = "1.1.0"
rsa = "0.5.0"
rsa-der = "0.2.1"
rand = "0.8.4"
cfb8 = "0.7.1"
aes = "0.7.5"
async-trait = "0.1.51"
log = "0.4"
flate2 = "1.0"
tokio = { version = "1", features = ["io-util"] }
uuid = "0.8.2"

[features]
initial_handle = ["handshake", "login", "status"]
# Defines the Minecraft(Status) the impl is using
handshake = []
login = []
status = []
play = []
